# xiaot-agent

./: .gitignore  README.md  config.example.yaml  config.yaml  config_loader.py  index.html  install.bat  main.py  manifest.json  push_via_gh_api.sh  pyproject.toml  requirements.txt  xiaot_agent_entry.py
brain/: agent.py  mcp_client.py  tools.py
brain/engines/: __init__.py  card_engine.py  clip_engine.py  composer.py  copy_engine.py  jimeng_engine.py  searxng_search.py  tts_engine.py
brain/providers/: __init__.py  anthropic.py  base.py  openai_compat.py
data/: status.json
data/user_prefs/: aesthetic_memory.yaml
evolution/: __init__.py
guard/: critic.py  hallucination.py
interfaces/: cli.py
interfaces/dashboard/: DESIGN.md  __init__.py  balances.py  monitor.py  server.py  state.py
interfaces/dashboard/static/: dashboard.html  manifest.json
interfaces/gui/: app.py
interfaces/web/: server.py
interfaces/web/static/: script.js  style.css
interfaces/web/templates/: chat.html
knowledge/: __init__.py  memory.py  rag.py
scripts/: create_gh_pages.py  push_gh_pages.py  sync_dashboard.py
skills/: __init__.py  manager.py
skills/hyperframes-video/: skill.yaml
skills/xhs-content-factory/: skill.yaml
skills/xhs-content-factory/references/: AG方法论.md  BGM偏好.yaml  xhs_穿搭_不露腿穿搭.md  xhs_穿搭_复古穿搭.md  xhs_穿搭_春夏穿搭.md  xhs_穿搭_显瘦穿搭.md  xhs_穿搭_穿搭合集.md  xhs_穿搭_裙装穿搭.md  xhs_穿搭_通勤穿搭.md  xhs_穿搭_配色穿搭.md  xhs_穿搭_韩系穿搭.md  剔除规则.md
skills/xhs-content-factory/tools/: xhs_search.py
