[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaot-agent"
version = "2.0.0"
description = "🐱 小t Agent — 小红书AI内容创作助手，越用越懂你"
readme = "README.md"
license = {text = "MIT"}
keywords = ["xiaohongshu", "video", "ai", "agent", "content-creation"]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
    "openai>=1.0",
    "scikit-learn>=1.0",
    "colorama>=0.4",
    "rich>=13.0",
    "httpx>=0.25",
    "aiofiles>=23.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "jinja2>=3.1",
    "python-multipart>=0.0.5",
    "websockets>=11.0",
    "customtkinter>=5.2",
    "Pillow>=10.0",
    "mediapipe>=0.10.0",
    "opencv-python>=4.8",
    "moviepy>=1.0.3",
    "numpy>=1.24",
    "edge-tts>=6.0",
    "playwright>=1.40",
]

[project.urls]
Homepage = "https://github.com/maomaozuiwudi/xiaot-agent"
Repository = "https://github.com/maomaozuiwudi/xiaot-agent"

[project.scripts]
xiaot = "xiaot_agent_entry:main"

[tool.setuptools.packages.find]
include = ["brain*", "guard*", "knowledge*", "skills*", "evolution*", "interfaces*"]

[tool.setuptools]
py-modules = ["main", "config_loader", "xiaot_agent_entry"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.md", "*.txt", "*.css", "*.js", "*.html"]
